crates/cribo/tests/snapshots/execution_results@side_effect_preservation.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/side_effect_preservation/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Initial state: []\nAfter imports: ['external_plugin_loaded']",
    stderr: "",
}
