crates/cribo/tests/snapshots/execution_results@simple_assignment.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_assignment/main.py
---
ExecutionResults {
    status: Success,
    stdout: "15",
    stderr: "",
}
