crates/cribo/tests/snapshots/execution_results@simple_math.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_math/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Addition: 8\nMultiplication: 28",
    stderr: "",
}
