crates/cribo/tests/snapshots/execution_results@simple_project.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_project/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello, Alice!\nCalculation result: 30\nUser: Alice, Age: 30",
    stderr: "",
}
