crates/cribo/tests/snapshots/execution_results@simple_treeshaking_inlining.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_treeshaking_inlining/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Hello, Ms. Alice!\nCreated person: Alice",
    stderr: "",
}
