crates/cribo/tests/snapshots/execution_results@simple_two_dots.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/simple_two_dots/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Tada cat!",
    stderr: "",
}
