crates/cribo/tests/snapshots/execution_results@stdlib_alike_locals.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_alike_locals/main.py
---
ExecutionResults {
    status: Success,
    stdout: "JSON string: {\"test\": \"value\"}\nLocal code variable: 42\nCode as string: 42\nLoop code: a\n  Uppercase: A\nLoop code: b\n  Uppercase: B\nLoop code: c\n  Uppercase: C\nSocket number: 0\nSocket number: 1\nSocket number: 2\nCounter: Counter({'a': 1, 'b': 1, 'c': 1})\nLocal pickle: I'm not the pickle module!\nStatus 200: OK\n  Lowercase: ok\nStatus 404: NOT_FOUND\n  Lowercase: not_found\nStatus 500: SERVER_ERROR\n  Lowercase: server_error\nCounter result: Counter({1: 2, 2: 2, 3: 1})\nAll tests completed!\n\n--- Testing shadowing ---\nos.getcwd() works: True\nShadowed os: I'm not the os module!\nOs uppercase: I'M NOT THE OS MODULE!",
    stderr: "",
}
