crates/cribo/tests/snapshots/execution_results@stdlib_decorator.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_decorator/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Loading utils module\nLoading mypackage\nOpening /tmp/test.txt\nSuccess",
    stderr: "",
}
