crates/cribo/tests/snapshots/execution_results@stdlib_module_conflicts_package_entry.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/stdlib_module_conflicts_package_entry/main.py
---
ExecutionResults {
    status: Success,
    stdout: "Test completed",
    stderr: "",
}
